# rust_axum_server_template

./: .gitignore  Cargo.toml  PREREQUISITES.md  PREREQUISITE_RESULTS.md  PROBLEMS.md  Shuttle.toml  TASK.md  TASK_RESULTS.md
.github/workflows/: ci.yml  shuttle-deploy.yml
docs/: README.md
docs/architecture/: README.md
docs/config/: README.md
docs/database/: README.md
docs/deployment/: README.md
docs/environment/: README.md
docs/local-development/: README.md
docs/middleware/: README.md
docs/models/: README.md
docs/observability/: README.md
docs/routes/: README.md
docs/security/: README.md
docs/testing/: README.md
docs/tests/: README.md
migrations/: 0001_create_todos.sql
src/: lib.rs  main.rs
src/config/: app_state.rs  mod.rs  server_config.rs
src/middleware/: middleware.rs  middleware_suite.rs  mod.rs
src/models/: mod.rs  server.rs  todo.rs
src/routes/: mod.rs  routes.rs
tests/: healthcheck.rs  middleware.rs  todos_flow.rs
tests/common/: db.rs  mod.rs
